--- a/myHtml.html
+++ b/myHtml.html
@@ -11,6 +11,12 @@
   <h1>itty</h1>
 <lable> name </lable>
 <input type="text"/>  
+<lable> address </lable>
+<input type="text"/>  
+<lable> email </lable>
+<input type="email"/>
+<lable> send </lable>
+<input type="submit"/>    
 </body>
 </html>
 
